fix: fix bugs in json change

--- a/pages/more/mla.html
+++ b/pages/more/mla.html
@@ -3473,8 +3473,8 @@
 
     <script src="../../assets/javascript/mla_list.js"></script>
 
-    <!-- <script src="../../assets/javascript/translate.js"></script>
-    <script type="text/javascript" src="https://www.google.com/jsapi"></script> -->
+     <!-- <script src="../../assets/javascript/translate.js"></script> -->
+   <!-- <script type="text/javascript" src="https://www.google.com/jsapi"></script> -->
 
     <!-- <script type="text/javascript">
         function googleTranslateElementInit() {
